--- a/static/css/default.css
+++ b/static/css/default.css
@@ -1,6 +1,29 @@
-body {
-    text-align: center;
+/*
+[3] onad | 20200327 | improvement of [2]
+*/
+main > .container {
+  padding: 60px 15px 0;
+  padding-top: 60px;
 }
+
+.footer {
+  background-color: #f5f5f5;
+}
+
+.footer > .container {
+  padding-right: 15px;
+  padding-left: 15px;
+}
+
+code {
+  font-size: 80%;
+}
+
+/*
+body {
+    padding-top: 5rem;
+}
+
 #page {
     width: 960px;
     text-align: left;
@@ -12,9 +35,15 @@ body {
     width: 200px;
     border: 1px solid #000;
 }
+
 #content {
     float: left;
     width: 600px;
     border: 1px solid #000;
     padding: 10px;
 }
+.starter-template {
+  padding: 3rem 1.5rem;
+  text-align: center;
+}
+*/
