--- a/templates/base_bootstrap_hdr_stky-ftr.html
+++ b/templates/base_bootstrap_hdr_stky-ftr.html
@@ -54,16 +54,23 @@
     <link href="{% static "assets/css/sticky-footer-navbar.css" %}" rel="stylesheet">
 </head>
 <body class="d-flex flex-column h-100">
-{% block header %}
 <header>
     <!-- Fixed navbar -->
     <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
-        <a class="navbar-brand" href="#">Fixed navbar</a>
+
+        <a class="navbar-brand col-2" href="#">[LOGO]</a>
+
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse"
                 aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" id="navbarCollapse">
+
+
+
+        <div class="collapse navbar-collapse col-10" id="navbarCollapse">
+            <span class="navbar-brand mr-auto col-3">CEU Credit Cooperative Management System</span>
+
+            {% block header_menu %}
             <ul class="navbar-nav mr-auto">
                 <li class="nav-item active">
                     <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
@@ -75,17 +82,19 @@
                     <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
                 </li>
             </ul>
-            <form class="form-inline mt-2 mt-md-0">
-                <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
-                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-            </form>
+            {% endblock %}
+
+            {% block header_profile %}
+            <span class="navbar-nav text-light">Profile</span>
+            {% endblock %}
         </div>
     </nav>
 </header>
-{% endblock %}
+
 <!-- Begin page content -->
 <main role="main" class="flex-shrink-0">
     <div class="container">
+
         {% block content %}
         <h1 class="mt-5">Sticky footer with fixed navbar</h1>
         <p class="lead">Pin a footer to the bottom of the viewport in desktop browsers with this custom HTML and CSS. A
@@ -94,23 +103,28 @@
         <p>Back to <a href="https://getbootstrap.com/docs/4.4/examples/sticky-footer/">the default sticky footer</a>
             minus the navbar.</p>
         {% endblock %}
+
     </div>
 </main>
 
-<footer class="footer mt-auto py-3">
-    <div class="container">
+<footer class="footer fixed-bottom py-2 ">
+    <div class="container col-12 text-center">
+
         {% block footer %}
         <span class="text-muted">Place sticky footer content here.</span>
         {% endblock %}
+
     </div>
 </footer>
+
+
 <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
         integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
         crossorigin="anonymous"></script>
 <script>
     window.jQuery || document.write('<script src="https://getbootstrap.com/docs/4.4/assets/js/vendor/jquery.slim.min.js"><\/script>')
 </script>
-<script src="{% static "assets/bootstrap/4.4.1/js/bootstrap.bundle.min.js"
+<script src="{% static "assets/bootstrap/4.4.1/js/bootstrap.bundle.min.js" %}"
         integrity="sha384-6khuMg9gaYr5AxOqhkVIODVIvm9ynTT5J4V1cfthmT+emCG6yVmEZsRHdxlotUnm"
         crossorigin="anonymous"></script>
 </body>
