--- a/templates/base_bootstrap_hdr_stky-ftr_sbar_dbrd.html
+++ b/templates/base_bootstrap_hdr_stky-ftr_sbar_dbrd.html
@@ -10,7 +10,7 @@
     <meta name="description" content="">
     <meta name="author" content="Mark Otto, Jacob Thornton, and Bootstrap contributors">
     <meta name="generator" content="Jekyll v3.8.6">
-    <title>{% block title %}CEUCCI Base Template: Header, Sticky Footer and Dashboard{% endblock %}
+    <title>{% block title %}CEUCCI Base Template: Header, Sticky Footer and Dashboard{% endblock %}</title>
     <link rel="canonical" href="https://getbootstrap.com/docs/4.4/examples/dashboard/">
 
     <!-- Bootstrap core CSS -->
@@ -48,25 +48,53 @@
         }
       }
 
-
-
     </style>
     <!-- Custom styles for this template -->
     <link href="{% static "assets/css/dashboard.css" %}" rel="stylesheet">
 </head>
-<body>
-<nav class="navbar navbar-dark fixed-top bg-dark flex-md-nowrap p-0 shadow">
-    <a class="navbar-brand col-sm-3 col-md-2 mr-0" href="#">Company name</a>
-    <input class="form-control form-control-dark w-100" type="text" placeholder="Search" aria-label="Search">
-    <ul class="navbar-nav px-3">
-        <li class="nav-item text-nowrap">
-            <a class="nav-link" href="#">Sign out</a>
-        </li>
-    </ul>
-</nav>
+<body class="d-flex flex-column h-100">
+
+<header>
+    <!-- Fixed navbar -->
+
+   <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+
+        <a class="navbar-brand col-2" href="#">[LOGO]</a>
+
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse"
+                aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+
+
+
+        <div class="collapse navbar-collapse col-10" id="navbarCollapse">
+            <span class="navbar-brand mr-auto col-3">CEU Credit Cooperative Management System</span>
+
+            {% block header_menu %}
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item active">
+                    <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Link</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+                </li>
+            </ul>
+            {% endblock %}
+
+            {% block header_profile %}
+            <span class="navbar-nav text-light">Profile</span>
+            {% endblock %}
+        </div>
+    </nav>
+</header>
 
 <div class="container-fluid">
     <div class="row">
+        {% block sidebar %}
         <nav class="col-md-2 d-none d-md-block bg-light sidebar">
             <div class="sidebar-sticky">
                 <ul class="nav flex-column">
@@ -142,9 +170,12 @@
                 </ul>
             </div>
         </nav>
+        {% endblock %}
 
         <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-4">
+            {% block content %}
             <div class="d-flex justify-content-between flex-wrap flex-md-nowrap align-items-center pt-3 pb-2 mb-3 border-bottom">
+
                 <h1 class="h2">Dashboard</h1>
                 <div class="btn-toolbar mb-2 mb-md-0">
                     <div class="btn-group mr-2">
@@ -287,31 +318,39 @@
                     </tr>
                     </tbody>
                 </table>
+
             </div>
+            {% endblock %}
         </main>
 
     </div>
 
 </div>
-<!--navbar navbar-dark fixed-top bg-dark flex-md-nowrap p-0 shadow mt-auto py-3-->
+
+
 <footer class="footer fixed-bottom flex-md-nowrap mt-auto p-2">
-              {% block footer %}
-              <span class="text-muted">Place sticky footer content here.</span>
-              {% endblock %}
+    <div class="container col-12 text-center">
+
+        {% block footer %}
+        <span class="text-muted">Place sticky footer content here.</span>
+        {% endblock %}
+
+    </div>
 </footer>
+
 
 <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
         integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
         crossorigin="anonymous"></script>
-<script>window.jQuery || document.write('<script src="/docs/4.4/assets/js/vendor/jquery.slim.min.js"><\/script>')
-
-
+<script>
+    window.jQuery || document.write('<script src="https://getbootstrap.com/docs/4.4/assets/js/vendor/jquery.slim.min.js"><\/script>')
 </script>
 <script src="{% static "assets/bootstrap/4.4.1/js/bootstrap.bundle.min.js" %}"
         integrity="sha384-6khuMg9gaYr5AxOqhkVIODVIvm9ynTT5J4V1cfthmT+emCG6yVmEZsRHdxlotUnm"
         crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/feather-icons/4.9.0/feather.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.3/Chart.min.js"></script>
-<script src="{% static "assets/js/dashboard.js" %}" ></script>
+<script src="{% static "assets/js/dashboard.js" %}"></script>
+
 </body>
 </html>
