--- a/templates/base_bootstrap_hdr_stky-ftr.html
+++ b/templates/base_bootstrap_hdr_stky-ftr.html
@@ -58,7 +58,7 @@
     <!-- Fixed navbar -->
     <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
 
-        <a class="navbar-brand col-2" href="#">[LOGO]</a>
+        <a class="navbar-brand col-2" href="{% url 'site_home' %}">[LOGO]</a>
 
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse"
                 aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
