--- a/templates/home.html
+++ b/templates/home.html
@@ -15,7 +15,7 @@
                     <a class="nav-link" href="#">Log In <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Sign Up</a>
+                    <a class="nav-link" href="{% url 'signup' %}">Sign Up</a>
                 </li>
             </ul>
 {% endblock %}
