--- a/templates/home.html
+++ b/templates/home.html
@@ -2,6 +2,7 @@
 [2] onad | 20200324 | created file
 [3] onad | 20200326 | improvement of [2]
 [4] onad | 20200330 | Application Home page and sign up functionality
+[5] onad | 20200330 | Application login functionality
 -->
 {% extends "base_bootstrap_hdr_stky-ftr.html" %}
 
@@ -10,13 +11,22 @@
 
 
 {% block header_profile %}
+
             <ul class="navbar-nav">
+                <!--[5]-->
+                {% if user.username is NONE %}
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Log In <span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="{% url 'login' %}">Log In <span class="sr-only">(current)</span></a>
                 </li>
                 <li class="nav-item">
+                    <!--[4]-->
                     <a class="nav-link" href="{% url 'signup' %}">Sign Up</a>
                 </li>
+                {% else %}
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'site_home' %}">{{user.username}}<span class="sr-only">(current)</span></a>
+                </li>
+                {% endif %}
             </ul>
 {% endblock %}
 
