--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -1,5 +1,6 @@
 <!--
 [5] onad | 20200330 | Application login functionality
+[7] onad | 20200331 | Password change functionality
 -->
 {% extends "base_bootstrap_hdr_stky-ftr.html" %}
 
@@ -8,11 +9,22 @@
 
 
 {% block header_profile %}
-            <ul class="navbar-nav">
-                <li class="nav-item">
-                    <a class="nav-link" href="{% url 'signup' %}">Sign Up<span class="sr-only">(current)</span></a>
-                </li>
-            </ul>
+    <ul class="navbar-nav">
+        {% if user.is_authenticated %}  <!--[7]-->
+        <li class="nav-item">
+            <a class="nav-link" href="{% url 'site_home' %}">{{user.username}}<span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="{% url 'logout' %}">Log Out</a>
+        </li>
+        {% else %}
+
+            <li class="nav-item">
+                <a class="nav-link" href="{% url 'signup' %}">Sign Up<span class="sr-only">(current)</span></a>
+            </li>
+
+        {% endif %}
+    </ul>
 {% endblock %}
 
 
