[8] onad | 20200331 | Password reset functionality -------------------------------------------------- accounts/password_reset/ [name='password_reset'] accounts/password_reset/done/ [name='password_reset_done'] accounts/reset/<uidb64>/<token>/ [name='password_reset_confirm'] accounts/reset/done/ [name='password_reset_complete']
Simulate email backend, add this line in the settings.py:
EMAIL_BACKEND = 'django.core.mail.backends.console.EmailBackend'

*python manage.py sendtestemail test_user01@example.com

templates/registration/login.html
templates/registration/password_reset_form.html
templates/registration/password_reset_done.html
templates/registration/password_reset_confirm.html
templates/registration/password_reset_complete.html

>python manage.py shell
>>> from django.contrib.auth.models import User
>>> u=User.objects.get(username='test_user01')
>>> u.email='test_user01@example.com'
>>> u.save()
>>> exit()

--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -1,6 +1,7 @@
 <!--
 [5] onad | 20200330 | Application login functionality
 [7] onad | 20200331 | Password change functionality
+[8] onad | 20200331 | Password reset functionality
 -->
 {% extends "base_bootstrap_hdr_stky-ftr.html" %}
 
@@ -34,5 +35,6 @@
             {% csrf_token %}
             {{ form.as_p }}
             <button type="submit">Log In</button>
+            <a href="{% url 'password_reset' %}">Forgot your password?</a>
         </form>
 {% endblock %}
