--- a/templates/base_bootstrap_hdr_stky-ftr.html
+++ b/templates/base_bootstrap_hdr_stky-ftr.html
@@ -3,6 +3,7 @@
 <html lang="en" class="h-100">
 <!--
 [3] onad | 20200326 | Update base_bootstrap_hdr_ftr.html and other templates to suit screens draft
+[9] onad | 20200401 | Protected/secured views
 -->
 <head>
     <meta charset="utf-8">
@@ -88,10 +89,10 @@
 
             {% block header_profile %}
             <ul class="navbar-nav">
-                <!--[5]-->
+                <!--[5][9]-->
                 {% if user.is_authenticated %}
                 <li class="nav-item">
-                    <a class="nav-link" href="{% url 'site_home' %}">{{user.username}}<span class="sr-only">(current)</span></a>
+                    <a class="nav-link" href="{% url 'logged_in' %}">{{user.username}}<span class="sr-only">(current)</span></a>
                 </li>
                 <!--[6]-->
                 <li class="nav-item">
