--- a/templates/base_bootstrap_hdr_stky-ftr_sbar_dbrd.html
+++ b/templates/base_bootstrap_hdr_stky-ftr_sbar_dbrd.html
@@ -2,7 +2,7 @@
 {% load static %}
 <html lang="en">
 <!--
-[3] onad | 20200326 | Update base.html and other templates to suit screens draft
+[3] onad | 20200326 | Update x_base.html and other templates to suit screens draft
 -->
 <head>
     <meta charset="utf-8">
