--- a/templates/home.html
+++ b/templates/home.html
@@ -5,17 +5,30 @@
 [5] onad | 20200330 | Application login functionality
 [6] onad | 20200330 | Application logout functionality
 -->
-{% extends "base_bootstrap_hdr_stky-ftr.html" %}
+{% extends "base.html" %}
 
 
 {% block title %}{{ title }}{% endblock %}
 
-
+{% block sidebar %}{% endblock %}
+s
 {% block content %}
-        <h1 class="mt-5 text-center">Welcome Message</h1>
+
+        <h1 class="mt-4">Welcome Message</h1>
         <p class="lead">About CEU Credit Cooperative. About CEU Credit Cooperative. About CEU Credit Cooperative.
             About CEU Credit Cooperative. About CEU Credit Cooperative. About CEU Credit Cooperative. About CEU Credit Cooperative.
             About CEU Credit Cooperative. About CEU Credit Cooperative. About CEU Credit Cooperative. About CEU Credit Cooperative.
             About CEU Credit Cooperative. About CEU Credit Cooperative. About CEU Credit Cooperative. About CEU Credit Cooperative.
         </p>
+         <p>About CEU Credit Cooperative. About CEU Credit Cooperative. About CEU Credit Cooperative.
+            About CEU Credit Cooperative. About CEU Credit Cooperative. About CEU Credit Cooperative. About CEU Credit Cooperative.
+            About CEU Credit Cooperative. About CEU Credit Cooperative. About CEU Credit Cooperative. About CEU Credit Cooperative.
+            About CEU Credit Cooperative. About CEU Credit Cooperative. About CEU Credit Cooperative. About CEU Credit Cooperative.
+        </p>
+         <p>About CEU Credit Cooperative. About CEU Credit Cooperative. About CEU Credit Cooperative.
+            About CEU Credit Cooperative. About CEU Credit Cooperative. About CEU Credit Cooperative. About CEU Credit Cooperative.
+            About CEU Credit Cooperative. About CEU Credit Cooperative. About CEU Credit Cooperative. About CEU Credit Cooperative.
+            About CEU Credit Cooperative. About CEU Credit Cooperative. About CEU Credit Cooperative. About CEU Credit Cooperative.
+        </p>
+
 {% endblock %}
