--- a/templates/registration/password_change_form.html
+++ b/templates/registration/password_change_form.html
@@ -1,14 +1,44 @@
 <!--
 [7] onad | 20200331 | Password change functionality
+[10] onad | 20200401 | Bootstrap4 forms
 -->
-{% extends "base_bootstrap_hdr_stky-ftr.html" %}
+{% extends "base.html" %}   <!--[10]-->
 
 
 {% block title %}CEU CC Management System User Password Change{% endblock %}
 
+{% block header_profile %}
+            <ul class="navbar-nav">
+                <!--[5]-->
+                {% if user.is_authenticated %}
+                <!--[10]-->
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                       data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        {{user.username}}
+                    </a>
+                    <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
+                        <a class="dropdown-item disabled" href="#">Profile</a>
+                        <a class="dropdown-item disabled" href="{% url 'password_change' %}">Change Password</a>
+                        <div class="dropdown-divider"></div>
+                        <a class="dropdown-item" href="{% url 'logout' %}">Log Out</a>
+                    </div>
+                </li>
 
-{% block content %}
-        <h1 class="mt-5 text-center">Change User Password</h1>
+                {% else %}
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'login' %}">Log In <span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item">
+                    <!--[4]-->
+                    <a class="nav-link" href="{% url 'signup' %}">Sign Up</a>
+                </li>
+                {% endif %}
+            </ul>
+{% endblock %}
+
+{% block content_authenticated %}
+        <h1 class="mt-4">Change User Password</h1>
         <form method="post">
             {% csrf_token %}
             {{ form.as_p }}
