--- a/templates/user_home.html
+++ b/templates/user_home.html
@@ -1,15 +1,25 @@
 <!--
 [9] onad | 20200401 | Protected/secured views
 -->
-{% extends "base_bootstrap_hdr_stky-ftr_sbar.html" %}
+{% extends "base.html" %}
 
 
 {% block title %}{{ title }}{% endblock %}
 
 
-{% block content %}
-        <h1 class="mt-5 text-center">Welcome Message</h1>
+{% block content_authenticated %}
+        <h1 class="mt-4">Welcome Message</h1>
         <p class="lead">About CEU Credit Cooperative. About CEU Credit Cooperative. About CEU Credit Cooperative.
+            About CEU Credit Cooperative. About CEU Credit Cooperative. About CEU Credit Cooperative. About CEU Credit Cooperative.
+            About CEU Credit Cooperative. About CEU Credit Cooperative. About CEU Credit Cooperative. About CEU Credit Cooperative.
+            About CEU Credit Cooperative. About CEU Credit Cooperative. About CEU Credit Cooperative. About CEU Credit Cooperative.
+        </p>
+        <p>About CEU Credit Cooperative. About CEU Credit Cooperative. About CEU Credit Cooperative.
+            About CEU Credit Cooperative. About CEU Credit Cooperative. About CEU Credit Cooperative. About CEU Credit Cooperative.
+            About CEU Credit Cooperative. About CEU Credit Cooperative. About CEU Credit Cooperative. About CEU Credit Cooperative.
+            About CEU Credit Cooperative. About CEU Credit Cooperative. About CEU Credit Cooperative. About CEU Credit Cooperative.
+        </p>
+        <p>About CEU Credit Cooperative. About CEU Credit Cooperative. About CEU Credit Cooperative.
             About CEU Credit Cooperative. About CEU Credit Cooperative. About CEU Credit Cooperative. About CEU Credit Cooperative.
             About CEU Credit Cooperative. About CEU Credit Cooperative. About CEU Credit Cooperative. About CEU Credit Cooperative.
             About CEU Credit Cooperative. About CEU Credit Cooperative. About CEU Credit Cooperative. About CEU Credit Cooperative.
