--- a/templates/base.html
+++ b/templates/base.html
@@ -1,36 +1,282 @@
-<!--
-[2] onad | 20200324 | Create base_bootstrap_hdr_ftr.html template (initial draft)
-[3] onad | 20200326 | Update base_bootstrap_hdr_ftr.html and other templates to suit screens draft
--->
+<!doctype html>
 {% load static %}
-<!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="h-100">
+<!--
+[3] onad | 20200326 | Update x_base.html and other templates to suit screens draft
+[9] onad | 20200401 | Protected/secured views
+[10] onad | 20200401 | Bootstrap4 forms
+-->
 <head>
-    <meta charset="UTF-8">
-    <title>{% block title %}My Base Template{% endblock %}</title>
-    <link rel="stylesheet" type="text/css" href="{% static "assets/css/default.css" %}">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="description" content="">
+    <meta name="author" content="Mark Otto, Jacob Thornton, and Bootstrap contributors">
+    <meta name="generator" content="Jekyll v3.8.6">
+    <title>{% block title %}CEUCCI Base Template: Header, Sidebar and Sticky Footer{% endblock %}</title>
+
+    <link rel="canonical" href="https://getbootstrap.com/docs/4.4/examples/sticky-footer-navbar/">
+
+    <!-- Bootstrap core CSS -->
+    <link href="{% static 'assets/bootstrap/4.4.1/css/bootstrap.min.css' %}" rel="stylesheet"
+          integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+
+    <!-- Favicons -->
+    <link rel="apple-touch-icon" href="https://getbootstrap.com/docs/4.4/assets/img/favicons/apple-touch-icon.png"
+          sizes="180x180">
+    <link rel="icon" href="https://getbootstrap.com/docs/4.4/assets/img/favicons/favicon-32x32.png" sizes="32x32"
+          type="image/png">
+    <link rel="icon" href="https://getbootstrap.com/docs/4.4/assets/img/favicons/favicon-16x16.png" sizes="16x16"
+          type="image/png">
+    <link rel="manifest" href="https://getbootstrap.com/docs/4.4/assets/img/favicons/manifest.json">
+    <link rel="mask-icon" href="https://getbootstrap.com/docs/4.4/assets/img/favicons/safari-pinned-tab.svg"
+          color="#563d7c">
+    <link rel="icon" href="https://getbootstrap.com/docs/4.4/assets/img/favicons/favicon.ico">
+    <meta name="msapplication-config" content="https://getbootstrap.com/docs/4.4/assets/img/favicons/browserconfig.xml">
+    <meta name="theme-color" content="#563d7c">
+
+
+    <style>
+      .bd-placeholder-img {
+        font-size: 1.125rem;
+        text-anchor: middle;
+        -webkit-user-select: none;
+        -moz-user-select: none;
+        -ms-user-select: none;
+        user-select: none;
+      }
+
+      @media (min-width: 768px) {
+        .bd-placeholder-img-lg {
+          font-size: 3.5rem;
+        }
+      }
+
+
+    </style>
+    <!-- Custom styles for this template -->
+    <link href="{% static 'assets/css/default.css' %}" rel="stylesheet">
 </head>
-<body>
-<div id="page">
-    <div id="sidebar">
+
+
+
+<body class="d-flex flex-column h-100">
+
+<header>
+
+    <!-- Fixed navbar -->
+    <nav class="navbar navbar-expand-md navbar-dark fixed-top bg-dark">
+        {% if user.is_authenticated %}
+        <a class="navbar-brand col-2" href="{% url 'logged_in' %}">[LOGO]</a>
+        {% else %}
+        <a class="navbar-brand col-2" href="{% url 'site_home' %}">[LOGO]</a>
+        {% endif %}
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarCollapse"
+                aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+
+
+        <div class="collapse navbar-collapse col-10" id="navbarCollapse">
+            <span class="navbar-brand col-3 mr-auto">CEU Credit Cooperative Management System</span>
+
+            {% block header_menu %}
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item active">
+                    <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Link</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
+                </li>
+            </ul>
+            {% endblock %}
+
+            <!--[9]-->
+            {% block header_profile %}
+            <ul class="navbar-nav">
+                <!--[5]-->
+                {% if user.is_authenticated %}
+                <!--[10]-->
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                       data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                        {{user.username}}
+                    </a>
+                    <div class="dropdown-menu dropdown-menu-right" aria-labelledby="navbarDropdown">
+                        <a class="dropdown-item" href="#">Profile</a>
+                        <a class="dropdown-item" href="{% url 'password_change' %}">Change Password</a>
+                        <div class="dropdown-divider"></div>
+                        <a class="dropdown-item" href="{% url 'logout' %}">Log Out</a>
+                    </div>
+                </li>
+
+                {% else %}
+                <li class="nav-item">
+                    <a class="nav-link" href="{% url 'login' %}">Log In <span class="sr-only">(current)</span></a>
+                </li>
+                <li class="nav-item">
+                    <!--[4]-->
+                    <a class="nav-link" href="{% url 'signup' %}">Sign Up</a>
+                </li>
+                {% endif %}
+            </ul>
+            {% endblock %}
+        </div>
+
+    </nav>
+</header>
+
+
+
+<!-- Page Content (User not authenticated) / Page Content & Sidebar (User authenticated) -->
+{% if user.is_authenticated %}
+
+<div class="container-fluid">
+    <div class="row">
+
         {% block sidebar %}
-        <ul>
-            <!--[3]-->
-            <li><a href="{% url 'site_home' %}">Home</a></li>
-            <li><a href="/admin/">Admin</a></li>
-            <li><a href="{% url 'membership_home' %}">Membership</a></li>
-            <li><a href="{% url 'accounting_home' %}">Accounting</a></li>
-            <li><a href="{% url 'transaction_home' %}">Transaction</a></li>
-            <li><a href="{% url 'system_setting_home' %}">System Setting</a></li>
-            <li><a href="{% url 'report_home' %}">Report</a></li>
-        </ul>
+        <nav class="sidebar col-md-2 d-none d-md-block bg-light mt-5">
+            <div class="sidebar-sticky">
+                <ul class="nav flex-column">
+                    <li class="nav-item">
+                        <a class="nav-link active" href="#">
+                            <span data-feather="home"></span>
+                            Dashboard <span class="sr-only">(current)</span>
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">
+                            <span data-feather="file"></span>
+                            Orders
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">
+                            <span data-feather="shopping-cart"></span>
+                            Products
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">
+                            <span data-feather="users"></span>
+                            Customers
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">
+                            <span data-feather="bar-chart-2"></span>
+                            Reports
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">
+                            <span data-feather="layers"></span>
+                            Integrations
+                        </a>
+                    </li>
+                </ul>
+
+                <h6 class="sidebar-heading d-flex justify-content-between align-items-center px-3 mt-4 mb-1 text-muted">
+                    <span>Saved reports</span>
+                    <a class="d-flex align-items-center text-muted" href="#" aria-label="Add a new report">
+                        <span data-feather="plus-circle"></span>
+                    </a>
+                </h6>
+                <ul class="nav flex-column mb-2">
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">
+                            <span data-feather="file-text"></span>
+                            Current month
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">
+                            <span data-feather="file-text"></span>
+                            Last quarter
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">
+                            <span data-feather="file-text"></span>
+                            Social engagement
+                        </a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#">
+                            <span data-feather="file-text"></span>
+                            Year-end sale
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </nav>
         {% endblock %}
-    </div>
-    <div id="content">
-        {% block content %}
-        This is the content area.
-        {% endblock %}
+
+        <!-- Begin page content -->
+        <main role="main" class="col-md-9 ml-sm-auto col-lg-10 px-4">
+            <div class="container">
+
+                {% block content_authenticated %}
+                <h1 class="mt-5">Sticky footer with fixed navbar</h1>
+                <p class="lead">Pin a footer to the bottom of the viewport in desktop browsers with this custom HTML and
+                    CSS. A
+                    fixed navbar has been added with <code>padding-top: 60px;</code> on the <code>main &gt;
+                        .container</code>.
+                </p>
+                <p>Back to <a href="https://getbootstrap.com/docs/4.4/examples/sticky-footer/">the default sticky
+                    footer</a>
+                    minus the navbar.</p>
+                {% endblock %}
+
+            </div>
+        </main>
     </div>
 </div>
+
+    {% else %}
+    <main role="main" class="flex-shrink-0">
+        <div class="container">
+
+            {% block content %}
+            <h1 class="mt-5">Sticky footer with fixed navbar</h1>
+            <p class="lead">Pin a footer to the bottom of the viewport in desktop browsers with this custom HTML and CSS. A
+                fixed navbar has been added with <code>padding-top: 60px;</code> on the <code>main &gt; .container</code>.
+            </p>
+            <p>Back to <a href="https://getbootstrap.com/docs/4.4/examples/sticky-footer/">the default sticky footer</a>
+                minus the navbar.</p>
+            {% endblock %}
+
+        </div>
+    </main>
+    {% endif %}
+
+<footer class="footer fixed-bottom flex-md-nowrap mt-auto p-2">
+    <div class="container col-12 text-center">
+
+        {% block footer %}
+        <span class="text-muted">Place sticky footer content here.</span>
+        {% endblock %}
+
+    </div>
+</footer>
+
+
+<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+        integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
+        crossorigin="anonymous"></script>
+<script>
+    window.jQuery || document.write('<script src="https://getbootstrap.com/docs/4.4/assets/js/vendor/jquery.slim.min.js"><\/script>')
+
+</script>
+<script src="{% static 'assets/bootstrap/4.4.1/js/bootstrap.bundle.min.js' %}"
+        integrity="sha384-6khuMg9gaYr5AxOqhkVIODVIvm9ynTT5J4V1cfthmT+emCG6yVmEZsRHdxlotUnm"
+        crossorigin="anonymous"></script>
+
+<script src="https://cdnjs.cloudflare.com/ajax/libs/feather-icons/4.9.0/feather.min.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.3/Chart.min.js"></script>
+<script src="{% static 'assets/js/dashboard.js' %}"></script>
+
 </body>
 </html>
