--- a/templates/registration/password_reset_done.html
+++ b/templates/registration/password_reset_done.html
@@ -1,18 +1,18 @@
 <!--
 [8] onad | 20200331 | Password reset functionality
 -->
-{% extends "base_bootstrap_hdr_stky-ftr.html" %}
+{% extends "base.html" %}
 
 
 {% block title %}User Password Reset{% endblock %}
 
 
 {% block content %}
-        <div class="col-8 mx-auto justify-content-center">
-            <h1 class="mt-5">Password Reset Instruction Sent</h1>
+<!--        <div class="col-8 mx-auto">-->
+            <h1 class="mt-4">Password Reset Instruction Sent</h1>
             <p>We’ve emailed you instructions for setting your password,
                 if an account exists with the email you entered. You should receive them shortly.</p>
             <p>If you don’t receive an email, please make sure you’ve entered the address you registered with,
                 and check your spam folder.</p>
-        </div>
+<!--        </div>-->
 {% endblock %}
