--- a/templates/registration/password_reset_form.html
+++ b/templates/registration/password_reset_form.html
@@ -1,14 +1,14 @@
 <!--
 [8] onad | 20200331 | Password reset functionality
 -->
-{% extends "base_bootstrap_hdr_stky-ftr.html" %}
+{% extends "base.html" %}
 
 
 {% block title %}CEU CC Management System User Password Reset{% endblock %}
 
 
 {% block content %}
-        <h1 class="mt-5 text-center">Reset User Password</h1>
+        <h1 class="mt-4">Reset User Password</h1>
         <form method="post">
             {% csrf_token %}
             {{ form.as_p }}
