[10] onad | 20200401 | Bootstrap4 forms * log in form

--- a/templates/base.html
+++ b/templates/base.html
@@ -51,6 +51,9 @@
         }
       }
 
+      {% block style_extension %}
+
+      {% endblock %}
 
     </style>
     <!-- Custom styles for this template -->
