[10] onad | 20200401 | Bootstrap4 forms Sign up form Password reset form Password reset confirm form Password change form

--- a/templates/registration/password_change_done.html
+++ b/templates/registration/password_change_done.html
@@ -8,7 +8,7 @@
 
 
 {% block content_authenticated %}
-        <div class="col-5 mx-auto justify-content-center">
+        <div class="col-5 justify-content-start">
             <h1 class="mt-4">User Password Change</h1>
             <span class="badge badge-success">User Password Change is Successful!</span>
         </div>
