--- a/templates/registration/password_change_form.html
+++ b/templates/registration/password_change_form.html
@@ -4,8 +4,19 @@
 -->
 {% extends "base.html" %}   <!--[10]-->
 
+{% load crispy_forms_tags %} <!--[10]-->
 
 {% block title %}CEU CC Management System User Password Change{% endblock %}
+
+{% block style_extension %}
+form .alert ul li {
+  list-style: none;
+}
+form .alert ul {
+  padding: 0;
+  margin: 0;
+}
+{% endblock %}
 
 {% block header_profile %}
             <ul class="navbar-nav">
@@ -38,10 +49,20 @@
 {% endblock %}
 
 {% block content_authenticated %}
-        <h1 class="mt-4">Change User Password</h1>
-        <form method="post">
-            {% csrf_token %}
-            {{ form.as_p }}
-            <button type="submit">Change Password</button>
-        </form>
+    <div class="row justify-content-center mt-4">
+        <div class="col-8">
+            <div class="card">
+                <div class="card-body">
+                    <h1 class="mt-4">Change User Password</h1>
+                    <form method="post" novalidate>
+                        {% csrf_token %}
+                        <!--[10]-->
+                        <!--{{ form.as_p }}-->
+                        {{ form|crispy }}
+                        <button type="submit" class="btn btn-primary">Change Password</button>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
 {% endblock %}
