--- a/templates/registration/password_reset_form.html
+++ b/templates/registration/password_reset_form.html
@@ -1,17 +1,38 @@
 <!--
 [8] onad | 20200331 | Password reset functionality
+[10] onad | 20200401 | Bootstrap4 forms
 -->
 {% extends "base.html" %}
 
+{% load crispy_forms_tags %} <!--[10]-->
 
 {% block title %}CEU CC Management System User Password Reset{% endblock %}
 
+{% block style_extension %}
+form .alert ul li {
+  list-style: none;
+}
+form .alert ul {
+  padding: 0;
+  margin: 0;
+}
+{% endblock %}
 
 {% block content %}
-        <h1 class="mt-4">Reset User Password</h1>
-        <form method="post">
-            {% csrf_token %}
-            {{ form.as_p }}
-            <button type="submit">Send Confirmation Link</button>
-        </form>
+    <div class="row justify-content-center mt-4">
+        <div class="col-8">
+            <div class="card">
+                <div class="card-body">
+                    <h1 class="mt-4">Reset User Password</h1>
+                    <form method="post" novalidate>
+                        {% csrf_token %}
+                        <!--[10]-->
+                        <!--{{ form.as_p }}-->
+                        {{ form|crispy }}
+                        <button type="submit" class="btn btn-primary">Send Confirmation Link</button>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
 {% endblock %}
