--- a/templates/registration/signup.html
+++ b/templates/registration/signup.html
@@ -1,11 +1,22 @@
 <!--
 [4] onad | 20200330 | Application Home page and sign up functionality
+[10] onad | 20200401 | Bootstrap4 forms
 -->
 {% extends "base.html" %}
 
+{% load crispy_forms_tags %} <!--[10]-->
 
 {% block title %}{{ title }}{% endblock %}
 
+{% block style_extension %}
+form .alert ul li {
+  list-style: none;
+}
+form .alert ul {
+  padding: 0;
+  margin: 0;
+}
+{% endblock %}
 
 {% block header_profile %}
             <ul class="navbar-nav">
@@ -17,10 +28,22 @@
 
 
 {% block content %}
-        <h1 class="mt-4">User Registration</h1>
-        <form method="post">
-            {% csrf_token %}
-            {{ form.as_p }}
-            <button type="submit">Sign Up</button>
-        </form>
+
+   <div class="row justify-content-center mt-4">
+        <div class="col-8">
+            <div class="card">
+                <div class="card-body">
+                    <h1 class="mt-4">User Registration</h1>
+                    <form method="post" novalidate>
+                        {% csrf_token %}
+                        <!--[10]-->
+                        <!--{{ form.as_p }}-->
+                        {{ form|crispy }}
+                        <button type="submit" class="btn btn-primary">Sign Up</button>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+
 {% endblock %}
