--- a/templates/registration/password_reset_confirm.html
+++ b/templates/registration/password_reset_confirm.html
@@ -1,24 +1,46 @@
 <!--
 [8] onad | 20200331 | Password reset functionality
+[10] onad | 20200401 | Bootstrap4 forms
 -->
 {% extends "base.html" %}
 
+{% load crispy_forms_tags %} <!--[10]-->
 
 {% block title %}CEU CC Management System User Password Reset{% endblock %}
 
+{% block style_extension %}
+form .alert ul li {
+  list-style: none;
+}
+form .alert ul {
+  padding: 0;
+  margin: 0;
+}
+{% endblock %}
 
 {% block content %}
-        <h1 class="mt-4">Set New User Password</h1>
-        {% if validlink %}
-            <form method="post">
-                {% csrf_token %}
-                {{ form.as_p }}
-                <button type="submit">Save</button>
-            </form>
-        {% else %}
-            <p><span class="badge badge-danger">Invalid Token</span></p>
-            <p>
-                <a href="{% url 'password_reset' %}">Request a new password reset token</a>
-            </p>
-        {% endif %}
+    <div class="row justify-content-center mt-4">
+        <div class="col-8">
+            <div class="card">
+                <div class="card-body">
+                    <h1 class="mt-4">Set New User Password</h1>
+                    {% if validlink %}
+                        <form method="post" novalidate>
+                            {% csrf_token %}
+                            <!--[10]-->
+                            <!--{{ form.as_p }}-->
+                            {{ form|crispy }}
+                            <button type="submit" class="btn btn-primary">Save</button>
+                        </form>
+                    {% else %}
+                        <p><span class="badge badge-danger">Invalid Token</span></p>
+                        <p>
+                            <a href="{% url 'password_reset' %}" class="btn btn-link">
+                                Request a new password reset token</a>
+                        </p>
+                    {% endif %}
+                </div>
+            </div>
+        </div>
+    </div>
 {% endblock %}
