--- a/templates/base_datatable.html
+++ b/templates/base_datatable.html
@@ -21,6 +21,9 @@
     <!-- Bootstrap core CSS -->
     <link href="{% static 'assets/bootstrap/4.4.1/css/bootstrap.min.css' %}" rel="stylesheet">
     <!--    [11]-->
+    <link href="{% static 'assets/DataTables-1.10.21/css/dataTables.bootstrap4.min.css' %}" rel="stylesheet">
+    <link href="{% static 'assets/DataTables-1.10.21/css/jquery.dataTables.min.css' %}" rel="stylesheet">
+
 
     <!-- Favicons -->
     <link rel="apple-touch-icon" href="https://getbootstrap.com/docs/4.4/assets/img/favicons/apple-touch-icon.png"
@@ -35,6 +38,7 @@
     <link rel="icon" href="https://getbootstrap.com/docs/4.4/assets/img/favicons/favicon.ico">
     <meta name="msapplication-config" content="https://getbootstrap.com/docs/4.4/assets/img/favicons/browserconfig.xml">
     <meta name="theme-color" content="#563d7c">
+
 
 
     <style>
@@ -256,7 +260,11 @@
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/feather-icons/4.9.0/feather.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.3/Chart.min.js"></script>
-<script src="{% static 'assets/js/dashboard.js' %}"></script>
+<script src="{% static 'assets/DataTables-1.10.21/js/jquery.dataTables.min.js' %}"></script>
+<script src="{% static 'assets/DataTables-1.10.21/js/dataTables.bootstrap4.min.js' %}"></script>
 
+{% block script %}
+
+{% endblock %}
 </body>
 </html>
